Closed Bug 456122 Opened 17 years ago Closed 17 years ago

Don't fail offline cache updates for non-explicit items

Categories

(Core :: Networking: Cache, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dcamp, Assigned: dcamp)

References

()

Details

Attachments

(1 file)

Attached patch v1Splinter Review
The current spec/implementation of the offline spec requires that any failed load during a cache update should cause the entire application cache update to fail. This could leave to serious problems if the author changes the application layout on the server - any opportunistically or dynamically cached items that were moved away will permanently prevent updates. Attached patch changes this as proposed on the whatwg list - only updates to items explicitly listed in the manifest (CACHE: uris and fallback entries) will cause the entire update to fail.
Attachment #339525 - Flags: review?(cbiesinger)
OS: Mac OS X → All
Hardware: PC → All
Attachment #339525 - Flags: review?(cbiesinger) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: