Bug 456122 -  Don't fail offline cache updates for non-explicit items.  r+sr=biesi